C3 version history
--------------------------------

Version 6.1.17 (24.01.2022)
- UPDATED: Several libs
- ADDED: Log output of the module path to hunt down provider problems with lsf4j
- FIXED: Logging on client does work again

Version 6.1.14 (23.01.2022)
- FIXED: Scope for slf4j provider at runtime

Version 6.1.11 (21.01.2022)
- ADDED: Circle on the map to mark the Tukayyid line
- ADDED: Visual feedback if winner of a single drop was selected
- FIXED: Error in displaying invasion information
- FIXED: A number of exceptions

Version 6.1.10 (20.01.2022)
- FIXED: Sometimes the currently logged in user was not displayed at the top

Version 6.1.9 (18.01.2022)
- FIXED: FTP connect did fail because of missing credentials
- FIXED: Exception during evaluation of port property fixed
- FIXED: Exception handling in file transfer

Version 6.1.8 (18.01.2022)
- FIXED: Broken charset in properties file
- CHANGED: Further additions to the manual

Version 6.1.7 (16.01.2022)
- ADDED: A number of additional systems for meta phases 4 and up
- ADDED: Marker for systems that have been attacked in the current round and conquered
- FIXED: Behaviour of the command terminal cursor keys (up and down, history)
- FIXED: Display of download progress while downloading update
- FIXED: Storing of the system owner after an attack
- FIXED: Progress of season is displayed correctly now
- FIXED: Lobby can only be joined if it has been started by attacker commander
- CHANGED: Monitoring of clipboard for MWO API String now optional (settings)
- CHANGED: Creation of history screenshot of the map now optional (settings)
- CHANGED: Clipboard monitoring stops if an invasion is over

Version 6.1.5 (14.01.2022)
- CHANGED: Owner of a system changed immediatly after the attack (does not wait for next round)
- CHANGED: Editor improvements

Version 6.1.4 (12.01.2022)
- ADDED: New class to replace var keys in roleplay texts
- FIXED: Entries in the console history are displayed only once as intended